Fix event ordering in dashboard. Fix cancel email template

--- a/src/Corvus/EventBundle/Resources/views/Emails/eventCancel.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/eventCancel.html.twig
@@ -1,6 +1,6 @@
 <h3>Event "{{ event.title }}" has been canceled</h3><br>
 
-Hello, {{ email }}<br>
+Hello, {{ name }}<br>
 
 Event {{ event.title }} has been canceled by {{ event.gethost.getusername }}.<br><br>
 
