--- a/src/Corvus/EventBundle/Resources/views/Emails/timeout.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/timeout.html.twig
@@ -1,9 +1,9 @@
 
-<h3>{{ event.name }} Has ended</h3>
+<h3>{{ event.title }} Has ended</h3>
 
 Hello, {{ name }}<br><br>
 
-We want to remind, that event {{ event.name }} picking food time has ended.<br><br>
+We want to remind, that event {{ event.title }} picking food time has ended.<br><br>
 
 Please place orders, that everbody, who participates in event, could get food while it's hot :)<br><br>
 
