--- a/src/Corvus/EventBundle/Resources/views/Default/pick.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/pick.html.twig
@@ -49,7 +49,7 @@
 
                     <b>{{ order.vars.value.dish.name }}</b><br>
                     Amount:<button class="minus btn btn-default btn-xs">-</button>  <span>{{ order.vars.value.quantity }}</span>   <button class="plus btn btn-default btn-xs">+</button><br>
-                    Price: <p class="price">{{ order.vars.value.quantity * order.vars.value.pricePerUnit }}</p> €<br>
+                    Price: <p class="price">{{ (order.vars.value.quantity * order.vars.value.pricePerUnit) | number_format(2)}}</p> €<br>
 
                 </li>
             {% endfor %}
