--- a/src/Corvus/DashboardBundle/Resources/public/css/dashboard.css
+++ b/src/Corvus/DashboardBundle/Resources/public/css/dashboard.css
@@ -14,6 +14,18 @@
     margin-bottom: 10px;
     border: 1px solid lightgray;
 }
+.event_item.green{
+    border-left: 10px solid green;
+}
+.event_item.orange{
+    border-left: 10px solid orange;
+}
+.event_item.blue{
+    border-left: 10px solid dodgerblue;
+}
+.event_item.grey{
+    border-left: 10px solid gray;
+}
 .event_item .buttons{
     padding-top: 25px;
 }
@@ -25,4 +37,7 @@
     position:absolute;
     right: 30px;
     bottom: 15px;
+}
+.event_action{
+    min-width: 120px;
 }
