--- a/src/Corvus/EventBundle/Resources/views/Emails/timeout.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/timeout.html.twig
@@ -7,7 +7,7 @@ We want to remind, that event {{ event.title }} picking food time has ended.<br>
 
 Please place orders, that everbody, who participates in event, could get food while it's hot :)<br><br>
 
-To login, go to: <a href="{{ url('login') }}">Login</a>.<br><br>
+To login, go to: <a href="{{ url('corvus_main_default_index') }}">Login</a>.<br><br>
 
 Thanks!<br>
 
