--- a/src/Corvus/EventBundle/Resources/views/Default/review.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Default/review.html.twig
@@ -14,7 +14,10 @@
                 <div class="col-md-3">
                     <h4><strong>Dish</strong></h4>
                 </div>
-                <div class=" col-md-offset-3 col-md-3">
+                <div class="col-md-3">
+                    <h4><strong>Unit price</strong></h4>
+                </div>
+                <div class="col-md-3">
                     <h4><strong>Amount</strong></h4>
                 </div>
             </div>
@@ -29,7 +32,8 @@
                 <div class="dish_list">
                     {% for order in user.getOrdersForEvent(event) %}
                         <div class="row dish">
-                            <div class="col-md-offset-2 col-md-8">{% if order.isRemoved %}<del>{% endif %}{{ order.dish.name }}{% if order.isRemoved %}</del>{% endif %}</div>
+                            <div class="col-md-offset-2 col-md-4">{% if order.isRemoved %}<del>{% endif %}{{ order.dish.name }}{% if order.isRemoved %}</del>{% endif %}</div>
+                            <div class="col-md-4">{% if order.isRemoved %}<del>{% endif %}{{ order.dish.price }}{% if order.isRemoved %}</del>{% endif %}</div>
                             <div class="col-md-2">{% if order.isRemoved %}<del>{% endif %}{{ order.quantity }}{% if order.isRemoved %}</del>{% endif %}</div>
                         </div>
                     {% endfor %}
