--- a/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/allOrdersDelete.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/allOrdersDelete.html.twig
@@ -3,15 +3,15 @@
 
 Hello, {{ name }}<br><br>
 
-We want to announce, that food for "{{ event.title }}" has been ordered<br>
+We want to announce, that food for "{{ event.title }}" has been ordered.<br>
 But your order was deleted:<br>
 <ul>
     {% for order in removed_orders %}
-        <li>{{ order.getDish.getName }}, {{ order.getQuantity }} piece's</li>
+        <li>{{ order.getDish.getName }}, {{ order.getQuantity }} piece's.</li>
     {% endfor %}
 </ul><br>
 
-Approximate devlivery time: {{ delivery_time |date('Y-m-d H-i')}}<br><br>
+Approximate devlivery time: {{ delivery_time |date('Y-m-d H-i')}}.<br><br>
 
 
 Massive Food ordering system: <a href="{{ url('login') }}">CorvusFood</a>.<br><br>
