--- a/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/foodOrdered.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/foodOrdered/foodOrdered.html.twig
@@ -3,16 +3,16 @@
 
 Hello, {{ name }}<br><br>
 
-We want to announce, that food for "{{ event.title }}" has been ordered<br><br>
+We want to announce, that food for "{{ event.title }}" has been ordered.<br><br>
 Your order:<br>
 <ul>
     {% for order in orders %}
-        <li>{{ order.getDish.getName }}, {{ order.getQuantity }} piece's. Price: {{ order.getQuantity * order.pricePerUnit }}</li>
+        <li>{{ order.getDish.getName }}, {{ order.getQuantity }} piece's. Price: {{ order.getQuantity * order.pricePerUnit }}€.</li>
     {% endfor %}
 </ul><br>
 
 Approximate devlivery time: {{ delivery_time |date('Y-m-d H-i')}}<br>
-Enjoy your meal :)<br><br>
+Enjoy your meal. :)<br><br>
 
 Massive Food ordering system: <a href="{{ url('login') }}">CorvusFood</a>.<br><br>
 
