--- a/src/Corvus/EventBundle/Resources/views/Emails/remindUserDebt.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/remindUserDebt.html.twig
@@ -4,7 +4,7 @@ Hello, {{ user.username }}.<br><br>
 
 User {{ event.host.username }} want to remind you, that you have unpaid debts.<br><br>
 
-You owe him: {{ debt }}<br>
+You owe him: {{ debt }}€.<br>
 You were participating in "{{ event.title }}"<br>
 <br>
 CorvusFood website:
